Cambio de parametros

--- a/test.yaml
+++ b/test.yaml
@@ -1,9 +1,10 @@
-home: &h !!python/object/apply:pathlib.PosixPath
-- {home}
-wd: !!python/object/apply:pathlib.PosixPath
-- *h
-- GerDrive
-- Documentos
-- code_snippets
-- git_test
-- procesos_estocasticos
+ger:
+  home: &h !!python/object/apply:pathlib.PosixPath
+  - {home}
+  wd: !!python/object/apply:pathlib.PosixPath
+  - *h
+  - GerDrive
+  - Documentos
+  - code_snippets
+  - git_test
+  - procesos_estocasticos
